# flappy-rl

./: .env.server.example  .env.web.example  .gitignore  DOCS.md  README.md  Transformation.md  pyproject.toml
config/: game.toml  neat.cfg
docs/: developer-guide.md
scripts/: commit.sh  dev.sh
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  genome_io.py  neat_runtime.py  sensors.py  trainer.py
src/core/: __init__.py  environment.py  spaces.py
src/db/: __init__.py  client.py
src/environments/: __init__.py  registry.py
src/environments/flappy_bird/: __init__.py  config.toml  env.py  pickup.py  pipe.py  renderer.py  sensors.py  world.py
src/game/: __init__.py  bird.py  pickup.py  pipe.py  renderer.py  world.py
src/server/: app.py  auth.py  training_manager.py  ws_handler.py
src/server/routers/: __init__.py  admin.py  compete.py  game.py  leaderboard.py
tests/: test_api.py  test_physics.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: GameCanvas.tsx  MetricsChart.tsx  MetricsDashboard.tsx  Navbar.tsx  NetworkGraph.tsx  NetworkVisualizer.tsx
web/src/config/: env.ts
web/src/environments/: index.ts
web/src/game/: engine.ts
web/src/hooks/: useCompeteSocket.ts  usePlaySession.ts  useTrainingSocket.ts
web/src/pages/: AdminPage.tsx  CompetePage.tsx  HomePage.tsx  LeaderboardPage.tsx  PlayPage.tsx  TrainingPage.tsx
